--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LXK9301",
+  "name": "",
   "version": "1.0.0",
   "description": "{**When you're done, you can delete the content in this README and update the file with details for others getting started with your repository**}",
   "main": "AlipayManor.js",
@@ -8,14 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LXK9301/jd_scripts.git"
+    "url": ""
   },
   "keywords": [
     "京东薅羊毛工具, 京东水果、宠物、种豆等等"
   ],
-  "author": "LXK9301",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.8.0",
     "crypto-js": "^4.0.0",
     "download": "^8.0.0",
     "got": "^11.5.1",
